fancy fixed header on mobile

--- a/larry/i3-site/public/css/app.css
+++ b/larry/i3-site/public/css/app.css
@@ -102,16 +102,11 @@ p {
     font-size: 2.5em;
     color: transparent;
     -webkit-text-stroke: 1px #f1f1f1;
-    max-width: 85%;
+    /* max-width: 85%; */
 }
 
 
 .page-h1 {
-    position: fixed;
-    left: 0;
-    top: 50%;
-    transform: rotate(-90deg) translateY(55%) translateX(-50%);
-    transform-origin: left center;
     font-family: area-normal, sans-serif;
 
     text-transform: uppercase;
@@ -121,6 +116,18 @@ p {
 
     /* Optional: prevent text from wrapping or shrinking weirdly */
     white-space: nowrap;
+    text-align: center;
+    display: block;
+    width: 100%;
+}
+@media (min-width: 1520px) {
+    .page-h1 {
+        position: fixed;
+        left: 0;
+        top: 50%;
+        transform: rotate(-90deg) translateY(55%) translateX(-50%);
+        transform-origin: left center;
+    }
 }
 
 .card-outline {
